feat: Avancement index

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,6 +4,7 @@
     --color-awblack: #303028;
     --color-awgray: #B5B1A8;
     --color-awgraylight: #D6D0C2;
+    --color-awpastel: #FDF1EB;
     --color-awsalmon: #E8A499;
     --color-awpink: #FF6187;
     --color-aworange: #F6B99C;
